tests/expectations/parser-statement/statement/conditional_fail.out
Error [EPAR0370017]: Could not parse the implicit value: 2.
    --> test_0:1:25
     |
   1 | if true {} else let x = 2;
     |                         ^
